decafexpr/output/test/llvm/1param.llvm.bc.err
/usr/local/Cellar/llvm38/3.8.0/lib/llvm-3.8/bin/llvm-as: /Users/Sei/SFU/CMPT379/DecafCompiler/decafexpr/output/test/llvm/1param.llvm:8:3: error: instruction forward referenced with type 'i32*'
  %x = load i32, i32* %x
  ^
